// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cookie /> should render advertising only accepted 1`] = `
<div
  className="container cookie-manager w-auto"
>
  <div
    className="row mt-10 cookie-manager"
    id="cookies-manager"
  >
    <FormattedMessage
      id="cookies.content.page"
      values={Object {}}
    />
    <div
      className="row cookie-manager"
      id="cookies-performance"
      style={
        Object {
          "padding": "10px 0",
        }
      }
    >
      <Col
        bsClass="col"
        className="cookie-manager"
        componentClass="div"
        sm={8}
      >
        <strong>
          <FormattedMessage
            id="performance"
            values={Object {}}
          />
        </strong>
      </Col>
      <Col
        bsClass="col"
        className="d-flex justify-content-end cookie-manager"
        componentClass="div"
        sm={4}
      >
        <div
          className="color-red cookie-manager mr-10"
        >
          <FormattedMessage
            id="step.vote_type.disabled"
            values={Object {}}
          />
        </div>
        <Toggle
          checked={false}
          className="cookie-manager"
          icons={
            Object {
              "checked": <Unknown />,
              "unchecked": <Unknown />,
            }
          }
          id="cookies-enable-analytic"
          onChange={[Function]}
        />
      </Col>
      <Col
        bsClass="col"
        className="color-dark-gray cookie-manager"
        componentClass="div"
        sm={12}
      >
        <FormattedMessage
          id="help-text-performance-option"
          values={Object {}}
        />
      </Col>
    </div>
    <div
      className="row cookie-manager"
      id="cookies-advertising"
      style={
        Object {
          "padding": "10px 0",
        }
      }
    >
      <Col
        bsClass="col"
        className="cookie-manager"
        componentClass="div"
        sm={8}
      >
        <strong>
          <FormattedMessage
            id="advertising"
            values={Object {}}
          />
        </strong>
      </Col>
      <Col
        bsClass="col"
        className="d-flex justify-content-end cookie-manager"
        componentClass="div"
        sm={4}
      >
        <div
          className="color-green cookie-manager mr-10"
        >
          <FormattedMessage
            id="list.label_enabled"
            values={Object {}}
          />
        </div>
        <Toggle
          checked={true}
          className="cookie-manager"
          icons={
            Object {
              "checked": <Unknown />,
              "unchecked": <Unknown />,
            }
          }
          id="cookies-enable-ads"
          onChange={[Function]}
        />
      </Col>
      <Col
        bsClass="col"
        className="color-dark-gray cookie-manager"
        componentClass="div"
        sm={12}
      >
        <FormattedMessage
          id="help-text-advertising-option"
          values={Object {}}
        />
      </Col>
    </div>
  </div>
</div>
`;

exports[`<Cookie /> should render all accepted 1`] = `
<div
  className="container cookie-manager w-auto"
>
  <div
    className="row mt-10 cookie-manager"
    id="cookies-manager"
  >
    <FormattedMessage
      id="cookies.content.page"
      values={Object {}}
    />
    <div
      className="row cookie-manager"
      id="cookies-performance"
      style={
        Object {
          "padding": "10px 0",
        }
      }
    >
      <Col
        bsClass="col"
        className="cookie-manager"
        componentClass="div"
        sm={8}
      >
        <strong>
          <FormattedMessage
            id="performance"
            values={Object {}}
          />
        </strong>
      </Col>
      <Col
        bsClass="col"
        className="d-flex justify-content-end cookie-manager"
        componentClass="div"
        sm={4}
      >
        <div
          className="color-green cookie-manager mr-10"
        >
          <FormattedMessage
            id="list.label_enabled"
            values={Object {}}
          />
        </div>
        <Toggle
          checked={true}
          className="cookie-manager"
          icons={
            Object {
              "checked": <Unknown />,
              "unchecked": <Unknown />,
            }
          }
          id="cookies-enable-analytic"
          onChange={[Function]}
        />
      </Col>
      <Col
        bsClass="col"
        className="color-dark-gray cookie-manager"
        componentClass="div"
        sm={12}
      >
        <FormattedMessage
          id="help-text-performance-option"
          values={Object {}}
        />
      </Col>
    </div>
    <div
      className="row cookie-manager"
      id="cookies-advertising"
      style={
        Object {
          "padding": "10px 0",
        }
      }
    >
      <Col
        bsClass="col"
        className="cookie-manager"
        componentClass="div"
        sm={8}
      >
        <strong>
          <FormattedMessage
            id="advertising"
            values={Object {}}
          />
        </strong>
      </Col>
      <Col
        bsClass="col"
        className="d-flex justify-content-end cookie-manager"
        componentClass="div"
        sm={4}
      >
        <div
          className="color-green cookie-manager mr-10"
        >
          <FormattedMessage
            id="list.label_enabled"
            values={Object {}}
          />
        </div>
        <Toggle
          checked={true}
          className="cookie-manager"
          icons={
            Object {
              "checked": <Unknown />,
              "unchecked": <Unknown />,
            }
          }
          id="cookies-enable-ads"
          onChange={[Function]}
        />
      </Col>
      <Col
        bsClass="col"
        className="color-dark-gray cookie-manager"
        componentClass="div"
        sm={12}
      >
        <FormattedMessage
          id="help-text-advertising-option"
          values={Object {}}
        />
      </Col>
    </div>
  </div>
</div>
`;

exports[`<Cookie /> should render all refused 1`] = `
<div
  className="container cookie-manager w-auto"
>
  <div
    className="row mt-10 cookie-manager"
    id="cookies-manager"
  >
    <FormattedMessage
      id="cookies.content.page"
      values={Object {}}
    />
    <div
      className="row cookie-manager"
      id="cookies-performance"
      style={
        Object {
          "padding": "10px 0",
        }
      }
    >
      <Col
        bsClass="col"
        className="cookie-manager"
        componentClass="div"
        sm={8}
      >
        <strong>
          <FormattedMessage
            id="performance"
            values={Object {}}
          />
        </strong>
      </Col>
      <Col
        bsClass="col"
        className="d-flex justify-content-end cookie-manager"
        componentClass="div"
        sm={4}
      >
        <div
          className="color-red cookie-manager mr-10"
        >
          <FormattedMessage
            id="step.vote_type.disabled"
            values={Object {}}
          />
        </div>
        <Toggle
          checked={false}
          className="cookie-manager"
          icons={
            Object {
              "checked": <Unknown />,
              "unchecked": <Unknown />,
            }
          }
          id="cookies-enable-analytic"
          onChange={[Function]}
        />
      </Col>
      <Col
        bsClass="col"
        className="color-dark-gray cookie-manager"
        componentClass="div"
        sm={12}
      >
        <FormattedMessage
          id="help-text-performance-option"
          values={Object {}}
        />
      </Col>
    </div>
    <div
      className="row cookie-manager"
      id="cookies-advertising"
      style={
        Object {
          "padding": "10px 0",
        }
      }
    >
      <Col
        bsClass="col"
        className="cookie-manager"
        componentClass="div"
        sm={8}
      >
        <strong>
          <FormattedMessage
            id="advertising"
            values={Object {}}
          />
        </strong>
      </Col>
      <Col
        bsClass="col"
        className="d-flex justify-content-end cookie-manager"
        componentClass="div"
        sm={4}
      >
        <div
          className="color-red cookie-manager mr-10"
        >
          <FormattedMessage
            id="step.vote_type.disabled"
            values={Object {}}
          />
        </div>
        <Toggle
          checked={false}
          className="cookie-manager"
          icons={
            Object {
              "checked": <Unknown />,
              "unchecked": <Unknown />,
            }
          }
          id="cookies-enable-ads"
          onChange={[Function]}
        />
      </Col>
      <Col
        bsClass="col"
        className="color-dark-gray cookie-manager"
        componentClass="div"
        sm={12}
      >
        <FormattedMessage
          id="help-text-advertising-option"
          values={Object {}}
        />
      </Col>
    </div>
  </div>
</div>
`;

exports[`<Cookie /> should render analytics only accepted 1`] = `
<div
  className="container cookie-manager w-auto"
>
  <div
    className="row mt-10 cookie-manager"
    id="cookies-manager"
  >
    <FormattedMessage
      id="cookies.content.page"
      values={Object {}}
    />
    <div
      className="row cookie-manager"
      id="cookies-performance"
      style={
        Object {
          "padding": "10px 0",
        }
      }
    >
      <Col
        bsClass="col"
        className="cookie-manager"
        componentClass="div"
        sm={8}
      >
        <strong>
          <FormattedMessage
            id="performance"
            values={Object {}}
          />
        </strong>
      </Col>
      <Col
        bsClass="col"
        className="d-flex justify-content-end cookie-manager"
        componentClass="div"
        sm={4}
      >
        <div
          className="color-green cookie-manager mr-10"
        >
          <FormattedMessage
            id="list.label_enabled"
            values={Object {}}
          />
        </div>
        <Toggle
          checked={true}
          className="cookie-manager"
          icons={
            Object {
              "checked": <Unknown />,
              "unchecked": <Unknown />,
            }
          }
          id="cookies-enable-analytic"
          onChange={[Function]}
        />
      </Col>
      <Col
        bsClass="col"
        className="color-dark-gray cookie-manager"
        componentClass="div"
        sm={12}
      >
        <FormattedMessage
          id="help-text-performance-option"
          values={Object {}}
        />
      </Col>
    </div>
    <div
      className="row cookie-manager"
      id="cookies-advertising"
      style={
        Object {
          "padding": "10px 0",
        }
      }
    >
      <Col
        bsClass="col"
        className="cookie-manager"
        componentClass="div"
        sm={8}
      >
        <strong>
          <FormattedMessage
            id="advertising"
            values={Object {}}
          />
        </strong>
      </Col>
      <Col
        bsClass="col"
        className="d-flex justify-content-end cookie-manager"
        componentClass="div"
        sm={4}
      >
        <div
          className="color-red cookie-manager mr-10"
        >
          <FormattedMessage
            id="step.vote_type.disabled"
            values={Object {}}
          />
        </div>
        <Toggle
          checked={false}
          className="cookie-manager"
          icons={
            Object {
              "checked": <Unknown />,
              "unchecked": <Unknown />,
            }
          }
          id="cookies-enable-ads"
          onChange={[Function]}
        />
      </Col>
      <Col
        bsClass="col"
        className="color-dark-gray cookie-manager"
        componentClass="div"
        sm={12}
      >
        <FormattedMessage
          id="help-text-advertising-option"
          values={Object {}}
        />
      </Col>
    </div>
  </div>
</div>
`;
